--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CellAutoApp</string>
+    <string name="main_title">Cellular Automata</string>
+    <string name="start_button">Continue</string>
 </resources>
